--- a/public/index.html
+++ b/public/index.html
@@ -19,28 +19,28 @@
   <footer>
     <form class="new-item-form">
       <div class="field">
-        <label>Type:</label>
+        <label><h3>Type:</h3></label>
         <select id="type">
           <option value="invoice">Invoice</option>
           <option value="payment">Payment</option>
         </select>
       </div>
       <div class="field">
-        <label>To / From:</label>
+        <label><h3>To / From:</h3></label>
         <input type="text" id="tofrom">
       </div>   
       <div class="field">
-        <label>Details:</label>
+        <label><h3>Details:</h3></label>
         <input type="text" id="details">
       </div>
       <div class="field">
-        <label>Amount (£):</label>
+        <label><h3>Amount (Rs):</h3></label>
         <input type="number" id="amount">
       </div>
       <button>Add</button>
     </form>
 
-    <a href="https://www.thenetninja.co.uk">The Net Ninja</a>
+    <a href="https://nidhi-shettigar-portfolio.netlify.app">Nidhi Shettigar</a>
   </footer>
 
   <script type='module' src='app.js'></script>
